--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,10 @@ footer a:hover{
     float: right;
     margin: 20px 0;
 }
-
+@media (min-width: 1025px) {
+	.h-custom {
+	height: 100vh !important;
+	}
+	}
 
 
